--- a/assets/scss/skin.scss
+++ b/assets/scss/skin.scss
@@ -1,5 +1,5 @@
 h1 {
-  background-color: rgb(222, 255, 190);
-  color: #75b695;
+  background-color: rgb(255, 122, 47);
+  color: #eef2a7;
   font-family: Arial, Helvetica, sans-serif;
 }
