--- a/public/css/skin.css
+++ b/public/css/skin.css
@@ -1,6 +1,6 @@
 h1 {
-  background-color: #deffbe;
-  color: #75b695;
+  background-color: #ff7a2f;
+  color: #eef2a7;
   font-family: Arial, Helvetica, sans-serif; }
 
 /*# sourceMappingURL=skin.css.map */
